クラスqa-headにクラスjs-acを追加

--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
     <div class="qa">
       <ul class="qa__block">
         <li class="qa__item js-ac">
-          <button class="qa__head">高知県 仁淀ブルー にこ淵</button>
+          <button class="qa__head js-ac">高知県 仁淀ブルー にこ淵</button>
           <div class="qa__body">
             <img class="text" src="images/koutiken.jpg" alt="滝の写真" />
             <p class="text">text text text</p>
           </div>
         </li>
         <li class="qa__item js-ac">
-          <button class="qa__head">岐阜県 モネの池</button>
+          <button class="qa__head js-ac">岐阜県 モネの池</button>
           <div class="qa__body">
             <img class="text" src="images/gifken.jpg" alt="モネの池" />
             <p class="text">text text text</p>
           </div>
         </li>
         <li class="qa__item js-ac">
-          <button class="qa__head">北海道 白金青い池</button>
+          <button class="qa__head js-ac">北海道 白金青い池</button>
           <div class="qa__body">
             <img class="text" src="images/hokkaido.jpg" alt="白樺の湖" />
             <p class="text">text text text</p>
