リンクを作成

--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
             <p class="text">text text text</p>
           </div>
         </li>
+
+        <li class="qa__item js-ac">
+          <button class="qa__head js-ac">リンク</button>
+          <div class="qa__body">
+            <ul>
+              <li class="qa__item js-ac">
+                <a href="https://www.google.com">Google</a>
+              </li>
+              <li class="qa__item js-ac">
+                <a href="https://www.yahoo.co.jp">Yahoo Japan</a>
+              </li>
+            </ul>
+          </div>
+        </li>
       </ul>
     </div>
     <script src="js/menu.js"></script>
