リンクのクラスを整理

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
           <button class="qa__head">リンク</button>
           <div class="qa__body">
             <ul>
-              <li class="qa__item js-ac">
+              <li class="qa__link">
                 <a href="https://www.google.com">Google</a>
               </li>
-              <li class="qa__item js-ac">
+              <li class="qa__link">
                 <a href="https://www.yahoo.co.jp">Yahoo Japan</a>
               </li>
             </ul>
